removed position fixed due to glitching while scrolling on mobile

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -22,7 +22,6 @@
   width: auto;
   background-image: url('../images/roofing3-main.jpg');
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-position: center;
   background-size: 100rem;
   @media screen and (min-width: 1058px) {
